--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "covid19-canada",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.opencovid.ca/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-simple-maps": "^2.3.0",
+    "recharts": "^2.0.9",
+    "swr": "^0.5.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
